# purviewautomation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  oldproject.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: CreatePurview.yml  build-docs.yml  createpurview.py  publish.yml  smokeshow.yml  test.yml  tests.yml  testsv2.yml  testsv2test.yml  testsv3test.yml
docs/: create-a-service-principal.md  handeling-multiple-duplicate-friendly-names.md  how-purview-names-work.md  index.md  why-this-library.md
docs/img/logo/: mylogo.jfif
docs/tutorial/: authenticate-connect.md  authenticate.md  create-collections.md  create-purview.md  delete-collection-assets.md  delete-collections-recursively.md  delete-collections.md  extract-collections.md  first-steps.md  get-collection-name.md  list-collections.md  step-by-step-walkthrough.md
purviewautomation/: __init__.py  auth.py  collections.py  collections2.py  collections3.py  old_collections.py  scanning.py
purviewautomation/docs_src/first_steps/: tutorial001.py
tests/: test_auth.py  test_collections.py  test_init.py
