[build-system]
requires = ["setuptools>=51.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purviewautomation"
description = "Python wrapper around the Purview APIs. Simplifies the code needed to write and improves the capabilities significantly."
version = "0.0.1"
authors = [
    { name = "Nick Ludwig", email = "nick.ludwig223@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    attrs==22.1.0
    certifi==2022.6.15
    charset-normalizer==2.1.1
    click==8.1.3
    colorama==0.4.6
    distlib==0.3.6
    exceptiongroup==1.0.2
    filelock==3.8.0
    ghp-import==2.1.0
    griffe==0.23.0
    idna==3.3
    importlib-metadata==5.0.0
    iniconfig==1.1.1
    Jinja2==3.1.2
    Markdown==3.3.7
    MarkupSafe==2.1.1
    mergedeep==1.3.4
    mkdocs==1.4.2
    mkdocs-autorefs==0.4.1
    mkdocs-material==8.5.8
    mkdocs-material-extensions==1.1
    mkdocstrings==0.19.0
    mkdocstrings-python==0.7.1
    packaging==21.3
    platformdirs==2.5.4
    pluggy==1.0.0
    py==1.11.0
    Pygments==2.13.0
    pymdown-extensions==9.8
    pyparsing==3.0.9
    pytest==7.2.0
    python-dateutil==2.8.2
    PyYAML==6.0
    pyyaml-env-tag==0.1
    requests==2.28.1
    six==1.16.0
    tomli==2.0.1
    tox==3.27.1
    urllib3==1.26.12
    virtualenv==20.16.7
    watchdog==2.1.9
    zipp==3.10.0
]


