[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purviewautomation"
description = "Python wrapper around the Purview APIs. Simplifies the code needed to write and improves the capabilities significantly."
version = "0.0.1"
authors = [
    { name = "Nick Ludwig", email = "nick.ludwig223@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "requests>=2.28.1",
]
[project.urls]
Homepage = "https://github.com/Ludwinic1/purviewautomation
Documentation = "https://netlifywebsite" # TODO

[project.optional-dependencies]
test = [
    "pytest==7.2.0"
]
doc = [
    "mkdocs >=1.1.2",
    "mkdocs-material>=8.1.4"
]

