[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purviewautomation"
description = "Purview Automation is a Python wrapper library built on top of Purview REST APIs that's designed to be simple to use and make scaling and automating Purview easier."
version = "0.1.4"
authors = [
    { name = "Nick Ludwig", email = "nick.ludwig223@gmail.com" },
]
license = "MIT"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "requests>=2.28.1",
]
[project.urls]
Homepage = "https://github.com/Ludwinic1/purviewautomation"
Documentation = "https://purviewautomation.netlify.app"

[project.optional-dependencies]
test = [
    "pytest==7.2.0",
    "black==22.10.0",
    "isort>=5.10.1",
    "coverage==6.5.0",
    "azure-identity==1.12.0"
]

doc = [
    "mkdocs >=1.1.2",
    "mkdocs-material>=8.1.4",
    "mkdocstrings==0.19.0",
    "mkdocstrings-python==0.7.1",
    "termynal==0.2.0"
]

dev = [
    "pre-commit==2.20.0"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"


