[metadata]
name = purviewautomation
author = Nick Ludwig
author_email = nick.ludwig223@gmail.com 
version = 0.0.1
description = Python wrapper around the Purview APIs. Simplifies the code needed to write and improves the capabilities significantly. 
long_description = README.md, CHANGELOG.md 
long_description_content_type = text/markdown
url = https://github.com/Ludwinic1/purviewautomation
license = MIT 
license_file = LICENSE 


[options]
packages = find:
include_package_data = True